Layout adjustments for footer and 404
Making the footer work a little better by moving it inside the main content element, that way we don't have to deal with overflows.
Updated wrapper classes for 404 and removed most for other pages as they're no longer necessary
Minor improvement to the 404 message text

Changing line endings on a bunch of changelog files because 11ty or git or VScode decided that was a cool thing they wanted to do...

--- a/_includes/layout/footer.liquid
+++ b/_includes/layout/footer.liquid
@@ -1,4 +1,4 @@
-<footer class="section footer z-1 position-relative{% if page-id == "fourohfour" %} mt-auto{% endif %}">
+<footer class="section footer {% if page-id == "fourohfour" %} mt-auto{% endif %}">
     <div class="mw me-auto ms-auto">
         <div class="p-4 pb-2">
             {% if page-id != "fourohfour" %}
