Add missing page-link class for disabled link styling in pagination

--- a/_includes/components/pagination.liquid
+++ b/_includes/components/pagination.liquid
@@ -15,7 +15,7 @@
         </li>
     {% else %}
         <li class="page-item disabled">
-            <span class="d-none d-sm-block">Previous</span>
+            <span class="page-link d-none d-sm-block">Previous</span>
             <span class="d-block d-sm-none" aria-label="Previous">&#8678;</span>
         </li>
     {% endif %}
@@ -52,7 +52,7 @@
         </li>
     {% else %}
         <li class="page-item disabled">
-            <span class="d-none d-sm-block">Next</span>
+            <span class="page-link d-none d-sm-block">Next</span>
             <span class="d-block d-sm-none" aria-label="Next">&#8680;</span>
         </li>
     {% endif %}
