--- a/_includes/layout/nav-s.liquid
+++ b/_includes/layout/nav-s.liquid
@@ -7,7 +7,7 @@
                 <span class="sidebar-item__icon ms-1 me-1 fs-4">
                     <i class="bi bi-{{ link.icon }}"></i>
                 </span>
-                <span class="sidebar-item__label fs-5 visually-hidden">
+                <span class="sidebar-item__label fs-5 d-none">
                     {{ link.label }}
                 </span>
             </button>
