--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,10 +92,13 @@ body {
         display: grid;
         bottom: -1rem;
         height: 100vh;
-
+        background-color: var(--bs-white);
+        
+        .section {
+            top: 0;
+        }
         .section.footer {
             height: fit-content;
-            top: 0;
         }
     }
 }
@@ -172,6 +175,15 @@ body {
                 &:focus {
                     background-color: var(--bs-bg-success-darken-10);
                 }
+            }
+        }
+        &__label {
+            --bs-text-opacity: 0;
+            color: rgba(var(--bs-bg-success), var(--bs-text-opacity)) !important;
+            transition: all ease 0.3s;
+
+            .sidebar-grid.open & {
+                --bs-text-opacity: 1;
             }
         }
     }
