--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -1,4 +1,4 @@
-<div class="sidebar-dropdown d-grid gap-2" id="nav-dropdown">
+<div class="sidebar-dropdown d-grid gap-2 pb-3" id="nav-dropdown">
     {% for link in nav %}
     <div class="sidebar-item d-grid gap-2{% if page-id ==  link.id %} active{% endif %}" data-link-id="{{ link.id }}"
         data-page-id="{{ page-id }}">
@@ -35,4 +35,20 @@
         {% endif %}
     </div>
     {% endfor %}
+    <div class="d-grid gap-2 mt-3">
+        <a class="btn btn-md sidebar-item__link text-start p-1" aria-label="View the sitemap"
+            href="{{ '/sitemap' | url }}" data-href="{{ '/sitemap' | url }}">
+            <span class="sidebar-item__icon ms-2 me-1 fs-5 position-relative" style="left:4px;">
+                <i class="bi bi-diagram-3" aria-hidden="true" focusable="false"></i>
+            </span>
+            <span class="sidebar-item__label fs-6 ms-1 d-none">Sitemap</span>
+        </a>
+        <a class="btn btn-md sidebar-item__link text-start p-1" aria-label="Latest site updates"
+            href="{{ '/changelog' | url }}" data-href="{{ '/changelog' | url }}">
+            <span class="sidebar-item__icon ms-2 me-1 fs-5 position-relative" style="left:4px;">
+                <i class="bi bi-calendar2-week" aria-hidden="true" focusable="false"></i>
+            </span>
+            <span class="sidebar-item__label fs-6 ms-1 d-none">Changelog</span>
+        </a>
+    </div>
 </div>
