Enhancing site structure
Created the ability to link directly to invidual tools, while retaining the landing page that contains them all.

WIP
 - still need to update the links in the sidebar
 - sitemap needs to be updated
 - relevant page specific scripts need to be added to pages.liquid
 - update tools to be auto expanded on their own dedicated page
 - figure out why javascript is busted for all tools
 - clean up old files

--- a/_includes/partials/misc/braille.liquid
+++ b/_includes/partials/misc/braille.liquid
@@ -1,3 +1,9 @@
+---
+layout: layout.liquid
+permalink: "/misc/braille/"
+page-id: braille
+title: Braille
+---
 <section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
