--- a/pages/text/replace.liquid
+++ b/pages/text/replace.liquid
@@ -22,7 +22,7 @@ title: Text replace
                 Supports <a href="https://en.wikipedia.org/wiki/Regular_expression" class="text-convrtr" title="Regular expression wikipedia page">regex</a> so you can run your own custom advanced replacements.
             </p>
         </div>
-        <div id="{{ filename }}Collapse" class="collapse">
+        <div id="{{ filename }}Collapse" class="collapse show">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Replace characters</span>
