Changes to image links in changelog files
Any linked images now have an outline that changes color on hover/active/focus

Linked up the v3 image
Also swapped out v3 changelog image for updated version

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -976,6 +976,20 @@ textarea.form-control.is-invalid.ld-warning {
             max-width: 75%;
         }
     }
+    a > img {
+        max-width: 100%;
+        padding: 0.5rem;
+        outline-width: 3px;
+        outline-style: solid;
+        outline-color: var(--convrtr-bg-color);
+        transition: outline-color ease 0.3s;
+
+        &:hover,
+        &:active,
+        &:focus {
+            outline-color: var(--convrtr-bg-color-75)
+        }
+    }
 }
 .version-list {
     >:not(caption)>*>* {
