--- a/pages/misc/covenant.liquid
+++ b/pages/misc/covenant.liquid
@@ -83,7 +83,7 @@ title: Convenant glyphs
                         </div>
                         <hr />
                         <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
-                        <div id="{{ filename }}ImageResults" class="covenant"></div>
+                        <div id="{{ filename }}ImageResults" class="covenant convrtr-results"></div>
                     </div>
                 </div>
             </div>
