--- a/pages/misc/forerunner.liquid
+++ b/pages/misc/forerunner.liquid
@@ -84,7 +84,7 @@ title: Forerunner glyphs
                         </div>
                         <hr />
                         <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
-                        <div id="{{ filename }}ImageResults" class="forerunner"></div>
+                        <div id="{{ filename }}ImageResults" class="forerunner convrtr-results"></div>
                     </div>
                 </div>
             </div>
