Add overflow handling to Hex shifting

--- a/pages/hex/shift.liquid
+++ b/pages/hex/shift.liquid
@@ -57,7 +57,7 @@ title: Hex shift
                                 <button class="nav-link" id="base64-tab" data-bs-toggle="tab" data-bs-target="#base64-tab-pane" type="button" role="tab" aria-controls="base64-tab-pane" aria-selected="false" tabindex="-1">Base64</button>
                                 <button class="nav-link" id="decimal-tab" data-bs-toggle="tab" data-bs-target="#decimal-tab-pane" type="button" role="tab" aria-controls="decimal-tab-pane" aria-selected="false" tabindex="-1">Decimal</button>
                               </div>
-                              <div class="tab-content flex-column flex-fill shift-tabs" id="{{ filename }}Tabs-content">
+                              <div class="tab-content flex-column flex-fill shift-tabs convrtr-results" id="{{ filename }}Tabs-content">
                                 <div class="tab-pane h-100 fade show active data-to-copy" id="text-tab-pane" role="tabpanel" aria-labelledby="text-tab" tabindex="0"></div>
                                 <div class="tab-pane h-100 fade data-to-copy" id="binary-tab-pane" role="tabpanel" aria-labelledby="binary-tab" tabindex="0"></div>
                                 <div class="tab-pane h-100 fade data-to-copy" id="hex-tab-pane" role="tabpanel" aria-labelledby="hex-tab" tabindex="0"></div>
