Don't show label for text tools

--- a/pages/text/tools.liquid
+++ b/pages/text/tools.liquid
@@ -34,8 +34,8 @@ title: Text tools
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" for="{{ filename }}Select">Delimiter</label>
-                                        <select class="form-select" id="{{ filename }}Select" autocomplete="off">
+                                        <label class="input-group-text visually-hidden" for="{{ filename }}Select">Select a tool</label>
+                                        <select class="form-select rounded-start-3" id="{{ filename }}Select" autocomplete="off">
                                             <option value="stripspaces" selected="">Strip spaces</option>
                                             <option value="stripallwhitespace">Strip all whitespace</option>
                                             <option value="reverse">Reverse</option>
