--- a/pages/ciphers/chaocipher.liquid
+++ b/pages/ciphers/chaocipher.liquid
@@ -48,7 +48,7 @@ title: Chaocipher
                                 <div class="col-12 col-md-auto flex-fill">
                                     <div class="row row-cols-auto g-0">
                                         <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
-                                            <div class="form-check form-switch text-start">
+                                            <div class="form-check form-switch text-start ms-2">
                                                 <input class="form-check-input" type="checkbox" role="switch" id="chain{{ filename | upperFirst }}" aria-checked="false">
                                                 <label class="form-check-label" for="chain{{ filename | upperFirst }}">Chain <span class="visually-hidden">{{ filename }} </span>commands</label>
                                             </div>
