--- a/pages/misc/elementstable.liquid
+++ b/pages/misc/elementstable.liquid
@@ -48,8 +48,8 @@ title: Periodic elements table
                     </div>
                     <div class="card-footer py-3">
                         <div class="row row-cols-2 g-md-0 gx-0 gy-2">
-                            <div class="col col-12 col-lg-auto me-2 mb-2">
-                                <div class="input-group w-auto mb-2">
+                            <div class="col col-12 col-lg-auto me-2">
+                                <div class="input-group w-auto">
                                     <label class="input-group-text" for="{{ filename }}Filter">Filter by <span class="visually-hidden">element properties</span></label>
                                     <select class="form-select" id="{{ filename }}Filter" autocomplete="off">
                                         <option value="all">All</option>
