--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1122,6 +1122,7 @@ textarea.form-control.is-invalid.ld-warning {
     background-color: transparent !important;
     max-width: 1920px !important;
     margin: 0 auto !important;
+    top: 64px !important;
 }
 .termsfeed-com---palette-light .cc-nb-main-container {
     background-color: var(--bs-gray-100) !important;
@@ -1135,14 +1136,15 @@ textarea.form-control.is-invalid.ld-warning {
     padding: 1.5rem !important;
     border: 1px solid var(--convrtr-bg-color);
     border-width: 0px !important;
-    border-top-width: 5px !important;
+    border-bottom-width: 5px !important;
 }
 @media (min-width:769px) {
     .cc-nb-main-container {
         width: 85%;
         margin-bottom: 3rem !important;
         border-width: 1px !important;
-        border-top-width: 5px !important;
+        border-top: 0 !important;
+        border-bottom-width: 5px !important;
     }
 }
 button.cc-nb-okagree,
