Updated local storage for tools
Similar to the work done on themes, open/closed tool states are now stored in a serialized JSON object so they can also include more information like descriptions and friendly names

Updated get/save localStorage functions to accommodate
Updated privacy policy to output localStorage items in alphabetical order
Fixed an type check issue when returning items from localstorage (true vs. "true")
Added additional data refs to each tool heading

--- a/pages/ciphers/atbash.liquid
+++ b/pages/ciphers/atbash.liquid
@@ -9,7 +9,8 @@ title: Atbash cipher
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none d-none"
                 data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
-                aria-expanded="false" aria-controls="{{ filename }}Collapse">
+                aria-expanded="false" aria-controls="{{ filename }}Collapse"
+                data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section">
                 <h2 class="display-6 w-100 d-flex m-0">
                     {{ filename | upperFirst }} cipher
                 </h2>
