--- a/pages/text/flip.liquid
+++ b/pages/text/flip.liquid
@@ -8,7 +8,8 @@ title: Flip text
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none d-none"
                 data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
-                aria-expanded="false" aria-controls="{{ filename }}Collapse">
+                aria-expanded="false" aria-controls="{{ filename }}Collapse"
+                data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Flip text
                 </h2>
@@ -21,7 +22,7 @@ title: Flip text
                 Flip text upside down - allows you to turn <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">this</code> into <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">ʇɥıs</code>
             </p>
         </div>
-        <div id="{{ filename }}Collapse" class="collapse show">
+        <div class="collapse show" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Flip Text</span>
