--- a/pages/text/replace.liquid
+++ b/pages/text/replace.liquid
@@ -8,7 +8,8 @@ title: Text replace
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none d-none"
                 data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
-                aria-expanded="false" aria-controls="{{ filename }}Collapse">
+                aria-expanded="false" aria-controls="{{ filename }}Collapse"
+                data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Replace characters
                 </h2>
@@ -22,7 +23,7 @@ title: Text replace
                 Supports <a href="https://en.wikipedia.org/wiki/Regular_expression" class="text-convrtr" title="Regular expression wikipedia page">regex</a> so you can run your own custom advanced replacements.
             </p>
         </div>
-        <div id="{{ filename }}Collapse" class="collapse show">
+        <div class="collapse show" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Replace characters</span>
