--- a/pages/text/tools.liquid
+++ b/pages/text/tools.liquid
@@ -8,7 +8,8 @@ title: Text tools
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none d-none"
                 data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
-                aria-expanded="false" aria-controls="{{ filename }}Collapse">
+                aria-expanded="false" aria-controls="{{ filename }}Collapse"
+                data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Tools
                 </h2>
